ast/tests/snapshots/ast__double_plus.snap
---
source: ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstRecursiveExpression {
        range: AstRange {
            start: AstPoint {
                line: 0,
                col: 0,
            },
            end: AstPoint {
                line: 0,
                col: 11,
            },
        },
        ident: Some(
            Identifier(
                AstIdentifier {
                    range: AstRange {
                        start: AstPoint {
                            line: 0,
                            col: 0,
                        },
                        end: AstPoint {
                            line: 0,
                            col: 6,
                        },
                    },
                    value: "values",
                },
            ),
        ),
        values: None,
        operator: None,
        instance_of: None,
        next: Some(
            Recursive(
                AstRecursiveExpression {
                    range: AstRange {
                        start: AstPoint {
                            line: 0,
                            col: 6,
                        },
                        end: AstPoint {
                            line: 0,
                            col: 11,
                        },
                    },
                    ident: Some(
                        ArrayAccess(
                            JType(
                                AstCastedExpression {
                                    range: AstRange {
                                        start: AstPoint {
                                            line: 0,
                                            col: 7,
                                        },
                                        end: AstPoint {
                                            line: 0,
                                            col: 10,
                                        },
                                    },
                                    cast: AstJType {
                                        range: AstRange {
                                            start: AstPoint {
                                                line: 0,
                                                col: 7,
                                            },
                                            end: AstPoint {
                                                line: 0,
                                                col: 8,
                                            },
                                        },
                                        value: Class(
                                            AstIdentifier {
                                                range: AstRange {
                                                    start: AstPoint {
                                                        line: 0,
                                                        col: 7,
                                                    },
                                                    end: AstPoint {
                                                        line: 0,
                                                        col: 8,
                                                    },
                                                },
                                                value: "i",
                                            },
                                        ),
                                    },
                                    expression: Recursive(
                                        AstRecursiveExpression {
                                            range: AstRange {
                                                start: AstPoint {
                                                    line: 0,
                                                    col: 8,
                                                },
                                                end: AstPoint {
                                                    line: 0,
                                                    col: 10,
                                                },
                                            },
                                            ident: None,
                                            values: None,
                                            operator: PlusPlus(
                                                AstRange {
                                                    start: AstPoint {
                                                        line: 0,
                                                        col: 8,
                                                    },
                                                    end: AstPoint {
                                                        line: 0,
                                                        col: 11,
                                                    },
                                                },
                                            ),
                                            instance_of: None,
                                            next: None,
                                        },
                                    ),
                                },
                            ),
                        ),
                    ),
                    values: None,
                    operator: None,
                    instance_of: None,
                    next: None,
                },
            ),
        ),
    },
    6,
)
